pending using zgc